# GROMODEX

./: .gitignore  .pre-commit-config.yaml  AGENTS.md  CHANGELOG.md  LICENSE  README.md  mkdocs.yml  pyproject.toml
docs/: agent-cli.md  api.md  development.md  index.md  mcp.md  usage.md
src/gromodex/: __main__.py  agent.py  cli.py  design.py  errors.py  factors.py  gpu.py  results.py  runner.py  schemas.py  server.py
tests/: test_agent.py  test_design.py  test_results.py  test_runner.py  test_schemas.py
