[build-system]
requires = ["hatchling>=1.25"]
build-backend = "hatchling.build"

[project]
name = "gromodex"
version = "0.1.0"
description = "Agent-usable MCP and CLI for GROMACS Design of Experiments benchmarking."
readme = "README.md"
requires-python = ">=3.11"
authors = [
  { name = "Marco Savioli" },
  { name = "Paolo Calligari" },
  { name = "Ugo Locatelli" },
  { name = "Gianfranco Bocchinfuso" },
]
contributors = [
  { name = "Fabio Bove", email = "fabiobove@binb.tech" },
]
license = { text = "MIT" }
keywords = ["mcp", "gromacs", "molecular-dynamics", "design-of-experiments", "gpu"]
classifiers = [
  "Development Status :: 3 - Alpha",
  "Intended Audience :: Science/Research",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Topic :: Scientific/Engineering :: Bio-Informatics",
]
dependencies = [
  "GPUtil>=1.4",
  "mcp[cli]>=1.13",
  "pydantic>=2.7",
]

[project.optional-dependencies]
dev = [
  "mkdocs>=1.6",
  "mkdocs-material>=9.5",
  "mkdocstrings[python]>=0.25",
  "mypy>=1.10",
  "pre-commit>=3.7",
  "pytest>=8.2",
  "pytest-cov>=5.0",
  "ruff>=0.6",
]

[project.scripts]
gromodex = "gromodex.cli:main"
gromodex-mcp = "gromodex.server:main"

[tool.hatch.build.targets.wheel]
packages = ["src/gromodex"]

[tool.ruff]
target-version = "py311"
line-length = 100
src = ["src", "tests"]

[tool.ruff.lint]
select = ["E", "F", "I", "B", "UP", "SIM", "PTH", "RUF"]
ignore = ["E501"]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"

[tool.mypy]
python_version = "3.11"
files = ["src/gromodex", "tests"]
mypy_path = "src"
strict = true
warn_return_any = true
warn_unused_configs = true
ignore_missing_imports = true
explicit_package_bases = true
plugins = ["pydantic.mypy"]

[[tool.mypy.overrides]]
module = "gromodex.server"
disallow_untyped_decorators = false

[tool.pytest.ini_options]
addopts = "-q --cov=gromodex --cov-report=term-missing"
testpaths = ["tests"]

[tool.coverage.run]
source = ["src/gromodex"]
branch = true
